objects/Sellable_Item_Project__c.object
<CustomObject>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_No__c</fullName>
        <externalId>true</externalId>
        <label>Project No.</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Sellable Item - Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_No__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sellable Item - Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>